feat: prepare sanctum bearer auth for api
